Fixed spacing and margins of about section.

--- a/default.css
+++ b/default.css
@@ -243,7 +243,8 @@ h6 { font-size: 16px; }
     display: grid;
     /*See about using this syntax instead of mediaqueries for the nav-wrapper.*/
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    padding: 50px 0;
+    padding: 10px 0;
+    grid-gap: 20px;
 }
 
 #skills {
@@ -252,8 +253,16 @@ h6 { font-size: 16px; }
     background-color: var(--previewShadow);
 }
 
+#skills ul {
+    padding: 10px;
+}
+
+.resume-wrapper {
+    display: grid;
+    align-content: center;
+}
+
 #resume-viewer {
-    padding: 20px;
     border: none;
     width: 100%;
     height: 500px;
